organized package and published to npm

--- a/website/ejercicios/call-apply-bind.html
+++ b/website/ejercicios/call-apply-bind.html
@@ -39,7 +39,9 @@
       const valores = [800, 'noreste'];
       caminar.apply(richard, valores);
 
+      // Pasar argumentos:
       /*
+        Bind - comma
         Call - comma
         Apply - arreglo
       */
